# l1-mining-optimizer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.demo.json  config.example.json  pyproject.toml  run_demo.ps1
docs/: app.js  index.html  styles.css
scripts/: mock_power_limit.cmd  mock_shutdown.cmd  mock_switch_target.cmd
site/: app.js  index.html  styles.css
src/mining_orchestrator/: __init__.py  actions.py  agents.py  api.py  cli.py  config.py  graph.py  langgraph_app.py  models.py  profit.py  streams.py
tests/: test_graph.py  test_profit.py
