[project]
name = "l1-mining-orchestrator"
version = "0.1.0"
description = "Autonomous Layer-1 mining profitability and telemetry optimizer."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]

[project.scripts]
mining-orchestrator = "mining_orchestrator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

