[project]
name = "l1-mining-orchestrator"
version = "0.1.0"
description = "Autonomous Layer-1 mining profitability and telemetry optimizer."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = []

[project.scripts]
mining-orchestrator = "mining_orchestrator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
